// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`HomeFeedRightDrawer > matches snapshot 1`] = `
<div>
  <div
    class="flex flex-col gap-6"
    data-testid="container"
  >
    <div
      data-testid="who-to-follow"
    >
      WhoToFollowSidebar
    </div>
    <div
      data-testid="active-users"
    >
      ActiveUsers
    </div>
    <div
      data-testid="hot-tags"
    >
      HotTags
    </div>
    <div
      data-testid="feedback-card"
    >
      FeedbackCard
    </div>
  </div>
</div>
`;

exports[`HomeFeedRightSidebar > matches snapshot 1`] = `
<div>
  <div
    data-testid="who-to-follow"
  >
    WhoToFollowSidebar
  </div>
  <div
    data-testid="active-users"
  >
    ActiveUsers
  </div>
  <div
    data-testid="hot-tags"
  >
    HotTags
  </div>
  <div
    data-testid="feedback-card"
  >
    FeedbackCard
  </div>
</div>
`;

exports[`HotFeedRightDrawer > matches snapshot 1`] = `
<div>
  <div
    class="flex flex-col gap-6"
    data-testid="container"
  >
    <div
      data-testid="who-to-follow"
    >
      WhoToFollowSidebar
    </div>
    <div
      data-testid="feedback-card"
    >
      FeedbackCard
    </div>
  </div>
</div>
`;

exports[`HotFeedRightSidebar > matches snapshot 1`] = `
<div>
  <div
    data-testid="who-to-follow"
  >
    WhoToFollowSidebar
  </div>
  <div
    class="sticky top-[100px] self-start"
    data-testid="container"
  >
    <div
      data-testid="feedback-card"
    >
      FeedbackCard
    </div>
  </div>
</div>
`;
